manifests/base/media/deployment-bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  labels:
    app: bazarr
spec:
  replicas: 0
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6767
              protocol: "TCP"
              name: web
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: shared-media-pvc
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config-pvc
