manifests/base/media/deployment-jackett.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  labels:
    app: jackett
spec:
  replicas: 0
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: lscr.io/linuxserver/jackett:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9117
              protocol: "TCP"
              name: web
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
              subPath: downloads
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: shared-media-pvc
        - name: config
          persistentVolumeClaim:
            claimName: jackett-config-pvc
