manifests/base/media/deployment-jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  strategy:
    type: Recreate  # We only have 1 gpu enabled server
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      imagePullSecrets:
        - name: dockerhub-image-pull-secret
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8096
              protocol: "TCP"
              name: jellyfin
          resources:
            requests:
              cpu: 200m
              memory: 1Gi
              gpu.intel.com/i915: 1
            limits:
              gpu.intel.com/i915: 1
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /cache
              name: cache
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
            - mountPath: /data/metadata
              name: metadata
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: shared-media-pvc
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-linux-config-pvc
        - name: metadata
          persistentVolumeClaim:
            claimName: jellyfin-metadata-pvc
        - name: tmp
          emptyDir: {}
        - name: cache
          emptyDir: {}
