manifests/base/media/deployment-nzbget.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
  labels:
    app: nzbget
spec:
  replicas: 0
  selector:
    matchLabels:
      app: nzbget
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      containers:
        - name: nzbget
          image: lscr.io/linuxserver/nzbget:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6789
              protocol: "TCP"
              name: web
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
            - mountPath: /intermediate
              name: intermediate
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: shared-media-pvc
        - name: config
          persistentVolumeClaim:
            claimName: nzbget-config-pvc
        - name: intermediate
          emptyDir: {}
