manifests/base/media/deployment-sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: ghcr.io/hotio/sonarr:release
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
              protocol: "TCP"
              name: web
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - jellyfin
              topologyKey: kubernetes.io/hostname
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: shared-media-pvc
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config-pvc
