manifests/base/media/statefulset-bazarr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
  labels:
    app: bazarr
    app.kubernetes.io/part-of: media
spec:
  replicas: 0
  selector:
    matchLabels:
      app: bazarr
      app.kubernetes.io/part-of: media
  template:
    metadata:
      labels:
        app: bazarr
        app.kubernetes.io/part-of: media
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:1.5.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6767
              protocol: "TCP"
              name: web
          livenessProbe:
            httpGet:
              path: /api/system/ping
              port: web
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config-ssd
  serviceName: bazarr
