manifests/base/media/statefulset-deluge.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: deluge
  labels:
    app: deluge
spec:
  replicas: 0
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
    spec:
      containers:
        - name: deluge
          image: lscr.io/linuxserver/deluge:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8112
              protocol: "TCP"
              name: web
            - containerPort: 6881
              protocol: "TCP"
              name: inbound-tpc
            - containerPort: 6881
              protocol: "UDP"
              name: inbound-udp
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media
              name: media
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - jellyfin
              topologyKey: kubernetes.io/hostname
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: shared-media-pvc
        - name: config
          persistentVolumeClaim:
            claimName: deluge-config-pvc
