manifests/base/media/statefulset-jackett.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jackett
  labels:
    app: jackett
    app.kubernetes.io/part-of: media
spec:
  replicas: 0
  selector:
    matchLabels:
      app: jackett
      app.kubernetes.io/part-of: media
  template:
    metadata:
      labels:
        app: jackett
        app.kubernetes.io/part-of: media
    spec:
      containers:
        - name: jackett
          image: lscr.io/linuxserver/jackett:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9117
              protocol: "TCP"
              name: web
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jackett-config
