manifests/base/media/statefulset-jellyfin.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  labels:
    app: jellyfin
    app.kubernetes.io/part-of: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
      app.kubernetes.io/part-of: media
  template:
    metadata:
      labels:
        app: jellyfin
        app.kubernetes.io/part-of: media
    spec:
      imagePullSecrets:
        - name: dockerhub-image-pull-secret
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8096
              protocol: "TCP"
              name: jellyfin
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
              gpu.intel.com/i915: 1
            limits:
              gpu.intel.com/i915: 1
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /cache
              name: cache
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
            - mountPath: /data/metadata
              name: metadata
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: metadata
          persistentVolumeClaim:
            claimName: jellyfin-metadata
        - name: tmp
          emptyDir: {}
        - name: cache
          emptyDir: {}
