manifests/base/media/statefulset-lidarr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lidarr
  labels:
    app: lidarr
    app.kubernetes.io/part-of: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
      app.kubernetes.io/part-of: media
  template:
    metadata:
      labels:
        app: lidarr
        app.kubernetes.io/part-of: media
    spec:
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:develop
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8686
              protocol: "TCP"
              name: web
          livenessProbe:
            httpGet:
              path: /ping
              port: web
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config-ssd
  serviceName: lidarr
