manifests/base/media/statefulset-nzbget.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nzbget
  labels:
    app: nzbget
    app.kubernetes.io/part-of: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nzbget
      app.kubernetes.io/part-of: media
  template:
    metadata:
      labels:
        app: nzbget
        app.kubernetes.io/part-of: media
    spec:
      containers:
        - name: nzbget
          image: lscr.io/linuxserver/nzbget:25.0.20250620
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6789
              protocol: "TCP"
              name: web
          livenessProbe:
            tcpSocket:
              port: web
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
            - mountPath: /intermediate
              name: intermediate
            - mountPath: /temp
              name: tmp
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: config
          persistentVolumeClaim:
            claimName: nzbget-config-ssd
        - name: intermediate
          persistentVolumeClaim:
            claimName: nzbget-intermediate
        - name: tmp
          emptyDir: {}
  serviceName: nzbget
