manifests/base/media/statefulset-radarr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  labels:
    app: radarr
    app.kubernetes.io/part-of: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
      app.kubernetes.io/part-of: media
  template:
    metadata:
      labels:
        app: radarr
        app.kubernetes.io/part-of: media
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:6.0.4
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          ports:
            - containerPort: 7878
              protocol: "TCP"
              name: web
          livenessProbe:
            httpGet:
              path: /ping
              port: web
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
            - mountPath: /run
              name: run
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config-ssd
        - name: run
          emptyDir: {}
  serviceName: radarr
