manifests/base/media/statefulset-sonarr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  labels:
    app: sonarr
    app.kubernetes.io/part-of: media
spec:
  replicas: 0
  selector:
    matchLabels:
      app: sonarr
      app.kubernetes.io/part-of: media
  template:
    metadata:
      labels:
        app: sonarr
        app.kubernetes.io/part-of: media
    spec:
      containers:
        - name: sonarr
          image: ghcr.io/hotio/sonarr:release
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
              protocol: "TCP"
              name: web
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
