manifests/base/media/service-bazarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bazarr
  name: bazarr-http
spec:
  ports:
    - port: 6767
      protocol: TCP
      targetPort: 6767
      name: web
  selector:
    app: bazarr
  type: ClusterIP
