manifests/base/media/service-deluge.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deluge
  name: deluge-http
spec:
  ports:
    - port: 8112
      protocol: TCP
      targetPort: 8112
      name: web
  selector:
    app: deluge
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: deluge
  name: deluge-tcp-udp
spec:
  ports:
    - port: 6881
      protocol: TCP
      targetPort: 6881
      name: inbound-tpc
    - port: 6881
      protocol: udp
      targetPort: 6881
      name: inbound-udp
  selector:
    app: deluge
  type: LoadBalancer
