manifests/base/media/service-lidarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lidarr
  name: lidarr
spec:
  ports:
    - port: 8686
      protocol: TCP
      targetPort: 8686
      name: web
  selector:
    app: lidarr
  clusterIP: None
