manifests/base/media/service-radarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr
  name: radarr-http
spec:
  ports:
    - port: 7878
      protocol: TCP
      targetPort: 7878
      name: web
  selector:
    app: radarr
  type: ClusterIP
