manifests/base/media/gateway-jellyfin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  hostnames:
    - gateway-jellyfin.zmuda.pro
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin-http
          port: 8096
