manifests/base/media/gateway.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  labels:
    dns-type: internal
spec:
  hostnames:
    - jellyfin.test.zmuda.pro
  parentRefs:
    - name: https
      namespace: kgateway-system
      sectionName: media-listeners
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
