manifests/base/media/ingress-bazarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16,10.0.0.0/8
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bazarr.zmuda.pro
      secretName: bazarr-tls
  rules:
    - host: bazarr.zmuda.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr-http
                port:
                  number: 6767
