manifests/base/media/ingress-deluge.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - deluge.zmuda.pro
      secretName: deluge-tls
  rules:
    - host: deluge.zmuda.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deluge-http
                port:
                  number: 8112
