manifests/base/media/ingress-jackett.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16,10.0.0.0/8
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jackett.zmuda.pro
      secretName: jackett-tls
  rules:
    - host: jackett.zmuda.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jackett-http
                port:
                  number: 9117
