manifests/base/media/ingress-lidarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16,10.0.0.0/8
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lidarr.zmuda.pro
      secretName: lidarr-tls
  rules:
    - host: lidarr.zmuda.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr-http
                port:
                  number: 8686
