manifests/base/media/ingress-radarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16,10.0.0.0/8
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - radarr.zmuda.pro
      secretName: radarr-tls
  rules:
    - host: radarr.zmuda.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr-http
                port:
                  number: 7878
