manifests/base/media/ingress-sonarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16,10.0.0.0/8
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sonarr.zmuda.pro
      secretName: sonarr-tls
  rules:
    - host: sonarr.zmuda.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
