manifests/base/media/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  labels:
    dns-type: internal
spec:
  hostnames:
  - jellyfin.test.zmuda.pro
  parentRefs:
    - name: https
      namespace: kgateway-system
  rules:
  - backendRefs:
    - name: jellyfin
      port: 8096
