manifests/base/media/nwp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-allow-media
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - podSelector:
            matchLabels:
              type: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: media
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kgateway-system
